# final-project

./: .gitignore  CMakeLists.txt  README.md  Turno.cpp  Turno.h
.cache/clangd/index/: Banca.cpp.0232E2D75242FFCD.idx  Banca.h.A03A9948E0DD7A58.idx  Casella.cpp.D71CED02A9AB51E9.idx  Casella.h.25BE409704978F49.idx  Dadi.cpp.238A949DE1C266C9.idx  Dadi.h.4FED27930874CBB9.idx  Giocatore.cpp.996C57FE6C625D87.idx  Giocatore.h.A4849676AF180C81.idx  Tabellone.cpp.ADFAF746D2664922.idx  Tabellone.h.23467110FEAA8126.idx  Turno.cpp.B7E1051327A407F3.idx  Turno.h.4BB2F2FCEDAC6EC1.idx  main.cpp.D8C4C6FC49660B64.idx
include/: Banca.h  Casella.h  Dadi.h  Giocatore.h  GiocatoreNonUmano.h  GiocatoreUmano.h  Gioco.h  Spostamento.h  Stampa.h  Tabellone.h  Turno.h
log/: log-computer.txt  log-human.txt  log.txt
src/: Banca.cpp  Casella.cpp  Dadi.cpp  Giocatore.cpp  GiocatoreNonUmano.cpp  GiocatoreUmano.cpp  Gioco.cpp  Spostamento.cpp  Stampa.cpp  Tabellone.cpp  Turno.cpp  main.cpp
